[package]
name = "rustright-cdp"
version = "0.1.0"
edition = "2021"
description = "Low-level Chrome DevTools Protocol implementation over WebSocket"
license = "MIT"

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync", "time", "process", "io-util", "rt"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
