[package]
name = "rustright-core"
version = "0.1.0"
edition = "2021"
description = "Core domain types for RustRight browser automation"
license = "MIT"

[dependencies]
rustright-cdp = { path = "../rustright-cdp" }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
