[package]
name = "rustright-test-macros"
version = "0.1.0"
edition = "2021"
description = "Proc macros for RustRight test framework"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }

[dev-dependencies]
rustright-test = { path = "../rustright-test" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
trybuild = "1.0"

[lints]
workspace = true
