[package]
name = "rustright-test"
version = "0.1.0"
edition = "2021"
description = "Test framework for RustRight browser automation"
license = "MIT"

[dependencies]
rustright-cdp = { path = "../rustright-cdp" }
rustright-core = { path = "../rustright-core" }
rustright-test-macros = { path = "../rustright-test-macros" }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync", "time", "rt"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
