[package]
name = "viewpoint-cdp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Low-level Chrome DevTools Protocol implementation over WebSocket"
documentation = "https://docs.rs/viewpoint-cdp"
readme = "README.md"

[features]
default = []
# Enable integration tests that require a running browser
integration = []

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync", "time", "process", "io-util", "rt"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"

[dev-dependencies]
base64 = "0.22"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
