[package]
name = "viewpoint-cdp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Low-level Chrome DevTools Protocol implementation over WebSocket"
documentation = "https://docs.rs/viewpoint-cdp"
readme = "README.md"

[features]
default = []
# Enable integration tests that require a running browser
integration = []

[dependencies]
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "process", "io-util", "rt"] }
tokio-tungstenite.workspace = true
tracing.workspace = true

[dev-dependencies]
base64.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true

[lints]
workspace = true
