[package]
name = "viewpoint-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-level browser automation API for Viewpoint"
documentation = "https://docs.rs/viewpoint-core"
readme = "README.md"

[features]
default = []
# Enable integration tests that require a running browser
integration = []

[dependencies]
viewpoint-cdp.workspace = true
viewpoint-js.workspace = true
viewpoint-js-core.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
glob.workspace = true
parking_lot.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "rt-multi-thread", "fs"] }
tracing.workspace = true
url.workspace = true
uuid.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
tracing-subscriber.workspace = true
viewpoint-js.workspace = true
viewpoint-js-core.workspace = true
zip.workspace = true

[lints]
workspace = true
