[package]
name = "viewpoint-js-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types for viewpoint-js macro"
documentation = "https://docs.rs/viewpoint-js-core"

[dependencies]
serde_json = { workspace = true, optional = true }

[features]
default = []
json = ["serde_json"]

[lints]
workspace = true
