[package]
name = "viewpoint-js"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Compile-time validated JavaScript macro for Viewpoint"
documentation = "https://docs.rs/viewpoint-js"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
swc_common = { version = "18", features = ["sourcemap"] }
swc_ecma_ast = "19"
swc_ecma_parser = "31"

# Re-export the core crate for users
viewpoint-js-core = { path = "../viewpoint-js-core" }

[dev-dependencies]
trybuild = "1.0"

[features]
default = []
json = ["viewpoint-js-core/json"]

[lints]
workspace = true
