[package]
name = "viewpoint-js"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Compile-time validated JavaScript macro for Viewpoint"
documentation = "https://docs.rs/viewpoint-js"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true

# Re-export the core crate for users
viewpoint-js-core.workspace = true

[dev-dependencies]
trybuild.workspace = true

[features]
default = []
json = ["viewpoint-js-core/json"]

[lints]
workspace = true
