[package]
name = "viewpoint-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Test framework for Viewpoint browser automation with Playwright-style assertions"
documentation = "https://docs.rs/viewpoint-test"
readme = "README.md"

[features]
default = []
# Enable integration tests that require a running browser
integration = []

[dependencies]
viewpoint-cdp.workspace = true
viewpoint-core.workspace = true
viewpoint-test-macros.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-test.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
